{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 409,
  "lineage": "586a5ebb-51c7-84f8-7f0b-e776d4442a23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044d39f0157cd467b",
            "association_id": "eipassoc-064789829bcda3652",
            "domain": "vpc",
            "id": "eipalloc-044d39f0157cd467b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-076e7cb4e588ff16c",
            "private_dns": "ip-10-0-65-127.ec2.internal",
            "private_ip": "10.0.65.127",
            "public_dns": "ec2-44-194-84-87.compute-1.amazonaws.com",
            "public_ip": "44.194.84.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:internet-gateway/igw-0bca0ca1a2ecf0081",
            "id": "igw-0bca0ca1a2ecf0081",
            "owner_id": "695294329720",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-03d6c0da9dc771581"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044d39f0157cd467b",
            "connectivity_type": "public",
            "id": "nat-03166ee777d3ffcc2",
            "network_interface_id": "eni-076e7cb4e588ff16c",
            "private_ip": "10.0.65.127",
            "public_ip": "44.194.84.87",
            "subnet_id": "subnet-098ed62c36be009d0",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b2c63dbd42c557a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03166ee777d3ffcc2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b2c63dbd42c557a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bca0ca1a2ecf0081",
            "id": "r-rtb-0599da55699b8f7241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0599da55699b8f724",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:route-table/rtb-09b2c63dbd42c557a",
            "id": "rtb-09b2c63dbd42c557a",
            "owner_id": "695294329720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03166ee777d3ffcc2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d6c0da9dc771581"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:route-table/rtb-0599da55699b8f724",
            "id": "rtb-0599da55699b8f724",
            "owner_id": "695294329720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bca0ca1a2ecf0081",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d6c0da9dc771581"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edf3c703c92771e0",
            "route_table_id": "rtb-09b2c63dbd42c557a",
            "subnet_id": "subnet-06c330357acfdf587"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route.private_nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eb342de7a7caf39",
            "route_table_id": "rtb-09b2c63dbd42c557a",
            "subnet_id": "subnet-0555681313824a87b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route.private_nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4060ac014372261",
            "route_table_id": "rtb-0599da55699b8f724",
            "subnet_id": "subnet-098ed62c36be009d0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route.public_internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078e50848ebecab5b",
            "route_table_id": "rtb-0599da55699b8f724",
            "subnet_id": "subnet-0ead9dc11cfe6abbc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route.public_internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:subnet/subnet-06c330357acfdf587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c330357acfdf587",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "695294329720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03d6c0da9dc771581"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:subnet/subnet-0555681313824a87b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0555681313824a87b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "695294329720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03d6c0da9dc771581"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:subnet/subnet-098ed62c36be009d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098ed62c36be009d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695294329720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03d6c0da9dc771581"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:subnet/subnet-0ead9dc11cfe6abbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ead9dc11cfe6abbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695294329720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03d6c0da9dc771581"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:vpc/vpc-03d6c0da9dc771581",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c8d8e6facb3ba93",
            "default_route_table_id": "rtb-0e36e32b5191e94d5",
            "default_security_group_id": "sg-03f0d2e410771d190",
            "dhcp_options_id": "dopt-05bf5d6c4a0feebec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03d6c0da9dc771581",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e36e32b5191e94d5",
            "owner_id": "695294329720",
            "tags": {
              "Name": "vpc-1698248844"
            },
            "tags_all": {
              "Name": "vpc-1698248844"
            }
          },
          "dependencies": [
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079527584f60edceb",
            "association_id": "eipassoc-090f5855b2832fa91",
            "domain": "vpc",
            "id": "eipalloc-079527584f60edceb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0950366b672b061cb",
            "private_dns": "ip-10-0-93-219.ec2.internal",
            "private_ip": "10.0.93.219",
            "public_dns": "ec2-52-70-89-125.compute-1.amazonaws.com",
            "public_ip": "52.70.89.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:internet-gateway/igw-0794ec7cd561d5cbe",
            "id": "igw-0794ec7cd561d5cbe",
            "owner_id": "695294329720",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-07134612c509e7c48"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079527584f60edceb",
            "connectivity_type": "public",
            "id": "nat-09e133519a583f964",
            "network_interface_id": "eni-0950366b672b061cb",
            "private_ip": "10.0.93.219",
            "public_ip": "52.70.89.125",
            "subnet_id": "subnet-05c67d61c81bfa4f9",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.kubernetes.aws_eip.nat",
            "module.kubernetes.aws_internet_gateway.igw",
            "module.kubernetes.aws_subnet.public",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a703d3a40658c6491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09e133519a583f964",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a703d3a40658c649",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_eip.nat",
            "module.kubernetes.aws_internet_gateway.igw",
            "module.kubernetes.aws_nat_gateway.nat",
            "module.kubernetes.aws_route_table.private",
            "module.kubernetes.aws_subnet.private",
            "module.kubernetes.aws_subnet.public",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0794ec7cd561d5cbe",
            "id": "r-rtb-0003d460aba0aec681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0003d460aba0aec68",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_internet_gateway.igw",
            "module.kubernetes.aws_route_table.public",
            "module.kubernetes.aws_subnet.public",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:route-table/rtb-0a703d3a40658c649",
            "id": "rtb-0a703d3a40658c649",
            "owner_id": "695294329720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09e133519a583f964",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07134612c509e7c48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_subnet.private",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:route-table/rtb-0003d460aba0aec68",
            "id": "rtb-0003d460aba0aec68",
            "owner_id": "695294329720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0794ec7cd561d5cbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07134612c509e7c48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_subnet.public",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da8effb560ad1316",
            "route_table_id": "rtb-0a703d3a40658c649",
            "subnet_id": "subnet-0da247e1283ec8fc1"
          },
          "dependencies": [
            "module.kubernetes.aws_eip.nat",
            "module.kubernetes.aws_internet_gateway.igw",
            "module.kubernetes.aws_nat_gateway.nat",
            "module.kubernetes.aws_route.private_nat_gateway",
            "module.kubernetes.aws_route_table.private",
            "module.kubernetes.aws_subnet.private",
            "module.kubernetes.aws_subnet.public",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f146183c0cd9a14d",
            "route_table_id": "rtb-0a703d3a40658c649",
            "subnet_id": "subnet-0e12aa8602300274c"
          },
          "dependencies": [
            "module.kubernetes.aws_eip.nat",
            "module.kubernetes.aws_internet_gateway.igw",
            "module.kubernetes.aws_nat_gateway.nat",
            "module.kubernetes.aws_route.private_nat_gateway",
            "module.kubernetes.aws_route_table.private",
            "module.kubernetes.aws_subnet.private",
            "module.kubernetes.aws_subnet.public",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea8a8298ff7b0d8",
            "route_table_id": "rtb-0003d460aba0aec68",
            "subnet_id": "subnet-05c67d61c81bfa4f9"
          },
          "dependencies": [
            "module.kubernetes.aws_internet_gateway.igw",
            "module.kubernetes.aws_route.public_internet_gateway",
            "module.kubernetes.aws_route_table.public",
            "module.kubernetes.aws_subnet.public",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ecb617a6fb36d90",
            "route_table_id": "rtb-0003d460aba0aec68",
            "subnet_id": "subnet-01218839c91f39dea"
          },
          "dependencies": [
            "module.kubernetes.aws_internet_gateway.igw",
            "module.kubernetes.aws_route.public_internet_gateway",
            "module.kubernetes.aws_route_table.public",
            "module.kubernetes.aws_subnet.public",
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:subnet/subnet-0da247e1283ec8fc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da247e1283ec8fc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "695294329720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07134612c509e7c48"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:subnet/subnet-0e12aa8602300274c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e12aa8602300274c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "695294329720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07134612c509e7c48"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:subnet/subnet-05c67d61c81bfa4f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c67d61c81bfa4f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695294329720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07134612c509e7c48"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:subnet/subnet-01218839c91f39dea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01218839c91f39dea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695294329720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07134612c509e7c48"
          },
          "dependencies": [
            "module.kubernetes.aws_vpc.main",
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695294329720:vpc/vpc-07134612c509e7c48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2b81d462fabd3aa",
            "default_route_table_id": "rtb-0fa7257491ae84d01",
            "default_security_group_id": "sg-0981c705099e66fff",
            "dhcp_options_id": "dopt-05bf5d6c4a0feebec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07134612c509e7c48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa7257491ae84d01",
            "owner_id": "695294329720",
            "tags": {
              "Name": "vpc-1698248844"
            },
            "tags_all": {
              "Name": "vpc-1698248844"
            }
          },
          "dependencies": [
            "module.kubernetes.data.external.vpc_name"
          ]
        }
      ]
    }
  ]
}